--- a/content/content.html
+++ b/content/content.html
@@ -35,6 +35,16 @@
 	</div>	
 	
 	<div id="contentBox" class="container1200">
+    <div class="box" data-block="1">
+      <div class="content_list01">
+          <p>导购服务消费—帮助消费者购买到具有一定资质及信用保障的正统商品。</p>
+          <p>导流服务商家—为入驻商城的企业和商品带来关注及购买流量，并将流量持续导入企业“自营或入驻的第三方商城平台”。</p>
+          <p>数据服务政府—实时统计福建电商企业在各应用平台的分布情况，监测服务效果，为相关政府部门的决策提供数据支持。</p>
+      </div>
+      <style type="text/css">
+          
+      </style>
+    </div>
     <div class="box" data-block="1" data-type="list">
       <div class="switch-tag01">
               <div class="search-inf-box">
@@ -197,7 +207,7 @@
       </div>  
     </div>
     <div class="box" data-block="1">
-      <div class="pagination01">
+      <div class="pagination01" data-type="pagination">
               <ul>
                   <li class="left"></li>
                   <li class="">1</li>
