--- a/content/content.html
+++ b/content/content.html
@@ -36,6 +36,40 @@
 	
 	<div id="contentBox" class="container1200">
     <div class="box" data-block="1">
+      <div class="foreword01" >
+          <div class="fTop" style="height:22px;">
+
+            <img src="/img/fTop.png">
+          </div>
+          <div class="fMiddle">
+            <div class="fLeft">
+              <span class="w01">前言</span>
+            </div>
+
+            <div class="text_w" style="height:auto;">
+            <p class="text01">
+            9月8日，第十九届中国国际投资贸易洽谈会(简称投洽会)在厦门盛大开幕，福建省统计局携“正统网”项目首次参加。当天上午，福建省统计局在厦门国际会展中心C4厅的正统网展馆现场主办了面向海峡两岸企业服务的正统网宣传推介活动，着重介绍了正统网理念、服务、创新和未来发展。福建省统计局孙希有局长、台北市电脑商业同业公会张永美副总干事、福建省商务厅电商处领导以及部分设区市统计局领导、台湾工商业知名企业和福建省互联网龙头企业代表等参加了本次宣传推介活动。
+            </p>
+            
+              <p class="text01">
+                值得关注的是，作为正统网服务项目的延伸，“正统商城”在此次推介活动上正式亮相。“正统商城”定位为官方主办的电商导购平台，将实现一站式无缝对接的“1 to N”电商平台购物新体验。正统商城将电商平台交易功能与正统网的服务功能相结合的方式，为已入驻正统网的电商企业提供在销商品展示，完成 “正统推荐”认证手续的商品，正统网为其提供信用背书，形成独一无二的“正统推荐”影响力，将为入驻企业带来实实在在的推广效应。
+              </p>
+              <p class="text01 ">
+                通过此次宣传推介活动，正统网的影响力进一步扩展，随着功能的丰富完善和发展壮大，“正统网”将成为取得经济大数据，为各级领导决策和国民经济核算服务的平台。
+              </p>
+              <!-- <span class="tBtn" style="background:#f6f6f6">【详细】 </span> -->
+              </div>
+          </div>
+          <div class="fBottom" style="height:22px;">
+
+            <img src="/img/fBottom.png">
+          </div>
+      </div>
+      <style type="text/css">
+       
+      </style>
+    </div>
+    <div class="box" data-block="1">
       <div class="content_list01">
           <p>导购服务消费—帮助消费者购买到具有一定资质及信用保障的正统商品。</p>
           <p>导流服务商家—为入驻商城的企业和商品带来关注及购买流量，并将流量持续导入企业“自营或入驻的第三方商城平台”。</p>
