--- a/button/button.html
+++ b/button/button.html
@@ -33,24 +33,25 @@
         <div id="buttonBox" class="container1200">
             <!-- data-set="set" -->
             <div class="box" data-block="2">
-                <form class="content1_form" data-plugin="jQuery.validator;tooltip" data-p-casename="validator_tooltip01">
+                <form class="content1_form" name="myform" id="myform" action="/index.php?c=form_account" method="post" data-plugin="jQuery.validator;tooltip"  data-p-casename="validator_tooltip01">
                     <div class="input_set01" >
                         <span style="float: left;color:#707070">公司简称</span>
-                        <input style="float: left;padding-left:12px;" type="" name="">
+                        <input style="float: left;padding-left:12px;" type=""  name="data[title]">
                     </div>
                     <div class="input_set01" >
                          <span style="float: left;;color:#707070">所属行业</span>
-                         <input style="float: left;padding-left:12px;" type="" name="">
+                         <input style="float: left;padding-left:12px;" type="" name="data[nature]">
                     </div>                
                     <div class="input_set01" >
                          <span style="float: left;;color:#707070">联系方式</span>
-                          <input style="float: left;padding-left:12px;" type="" name="">
+                          <input style="float: left;padding-left:12px;" type="" name="data[mobile]">
                     </div> 
 
                     <input type="submit" name="" value="提交问题" class="button">
                 </form>
                 <script type="text/javascript">
                     function validator_tooltip01(){
+
                         jQuery.validator.addMethod("isTel", function(value,element) {   
                             var length = value.length;   
                             var mobile = /^(((13[0-9]{1})|(15[0-9]{1})|(18[0-9]{1}))+\d{8})$/;   
@@ -73,14 +74,9 @@
                                     "data[mobile]":{
                                         required:"请填写联系方式"
                                     }
-                                },
-                              errorPlacement: function (label, element) {
-                                $(element).tooltip('destroy'); /*必需*/
-                                $(element).attr('title', $(label).text()).tooltip({
-                                    placement:"top"
-                                }); 
-                              }
+                                }
                         });
+                        
                     }
                 </script>
             </div>
