--- a/button/button.html
+++ b/button/button.html
@@ -80,6 +80,54 @@
                     }
                 </script>
             </div>
+            <div class="box" data-block="2">
+                <form class="content1_form" name="myform2" id="myform2" action="/index.php?c=form_account" method="post" data-plugin="jQuery.validator;tooltip"  data-p-casename="validator_tooltip02">
+                    <div class="input_set01" >
+                        <span style="float: left;color:#707070">公司简称</span>
+                        <input style="float: left;padding-left:12px;" type=""  name="data[title]">
+                    </div>
+                    <div class="input_set01" >
+                         <span style="float: left;;color:#707070">所属行业</span>
+                         <input style="float: left;padding-left:12px;" type="" name="data[nature]">
+                    </div>                
+                    <div class="input_set01" >
+                         <span style="float: left;;color:#707070">联系方式</span>
+                          <input style="float: left;padding-left:12px;" type="" name="data[mobile]">
+                    </div> 
+
+                    <input type="submit" name="" value="提交问题" class="button">
+                </form>
+                <script type="text/javascript">
+                    function validator_tooltip02(){
+
+                        jQuery.validator.addMethod("isTel", function(value,element) {   
+                            var length = value.length;   
+                            var mobile = /^(((13[0-9]{1})|(15[0-9]{1})|(18[0-9]{1}))+\d{8})$/;   
+                            var tel = /^(\d{3,4}-?)?\d{7,9}$/g;       
+                            return this.optional(element) || tel.test(value) || (length==11 && mobile.test(value));   
+                        }, "请正确填写您的联系方式"); 
+                        
+                        $("#myform2").validate({
+                             rules: {
+                                      "data[title]":"required",
+                                      "data[nature]":"required",
+                                      "data[mobile]":{
+                                        required:true,
+                                        isTel:true
+                                      }
+                                    },
+                              messages:{
+                                    "data[title]":"请填写公司名称",
+                                    "data[nature]":"请填写行业",
+                                    "data[mobile]":{
+                                        required:"请填写联系方式"
+                                    }
+                                }
+                        });
+                        
+                    }
+                </script>
+            </div>
             <div class="box">
                 <div class="circle_c_link button" data-type="button">
                     <img class="img-center" src="/img/icon001.png">
