--- a/barHeader/barHeader.html
+++ b/barHeader/barHeader.html
@@ -3,16 +3,11 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/css/base.css">
-	<link rel="stylesheet" type="text/css" href="/css/frame.css">
-	<link rel="stylesheet" type="text/css" href="/css/button.css">
-	<link rel="stylesheet" type="text/css" href="/css/barHeader.css">
 	
-	<link rel="stylesheet" type="text/css" href="/css/index.css">
 	
 	<script type="text/javascript" src="/js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="/js/common.js"></script>
 	<script type="text/javascript" src="/js/layer/layer.js"></script>
-	<script type="text/javascript" src="/js/index.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			$("#barHeaderBox").set({
