--- a/common/common.html
+++ b/common/common.html
@@ -2,7 +2,7 @@
     <div id="head" class="head">
         
         <link class="base" rel="stylesheet" type="text/css" href="/css/base.css">
-        <link rel="stylesheet" type="text/css" href="/css/frame.css">
+        <link class="ui" rel="stylesheet" type="text/css" href="/css/frame.css">
         <link rel="stylesheet" type="text/css" href="/css/button.css">
         <link rel="stylesheet" type="text/css" href="/css/barHeader.css">
         <link rel="stylesheet" type="text/css" href="/css/input.css">
