--- a/slider/slider.html
+++ b/slider/slider.html
@@ -21,13 +21,13 @@
 <body>
 <script type="text/javascript">
 
-  $(function(){
+  var c = $(function(){
     $("#sliderBox").set({
       brandName:"Slider & Affix",
       rowBlock:1
     });
   });
-  
+  commonHead(c);
 </script>
 	<div class="bg extend-width bg-black">
 		<div class="container1200">
