--- a/slider/slider.html
+++ b/slider/slider.html
@@ -21,12 +21,14 @@
 <body>
 <script type="text/javascript">
 
-  var c = $(function(){
-    $("#sliderBox").set({
-      brandName:"Slider & Affix",
-      rowBlock:1
+  var c = function(){
+    $(function(){
+      $("#sliderBox").set({
+        brandName:"Slider & Affix",
+        rowBlock:1
+      });
     });
-  });
+  } 
   commonHead(c);
 </script>
 	<div class="bg extend-width bg-black">
