--- a/input/input.html
+++ b/input/input.html
@@ -33,6 +33,12 @@
             </div>
         </div>
         <div id="inputBox" class="container1200">
+            <div class="box " data-block="3">
+                <div class="input-set04 float-r">
+                        <input class="input " type="" name="" placeholder="请输入搜索关键字">
+                        <input class="button white" type="submit" value="">
+                </div>
+            </div>
             <div class="box width66" data-block="1">
                 <div class="m-form-line clear" data-type="input-set">
                     <div class="block-2 input-set03">
