--- a/content/content.html
+++ b/content/content.html
@@ -33,6 +33,15 @@
 	</div>	
 	
 	<div id="contentBox" class="container1200">
+    <div class="box" data-type="list">
+              <div class="adr_box02">
+                          <p class="adr">地址：福建省闽侯县铁岭工业区二期长龙西路   </p>
+                          <p class="phone">电话：0591-22071855</p>
+                          <p class="cellphone">手机：17759077095</p>
+                          <p class="email">传真：0591-22071855</p>
+              </div>
+    </div>
+
     <div class="box">
         <div class="introduce float-l clear" style="height: 281px;">
             <div class="m_inner left">
