--- a/input/input.html
+++ b/input/input.html
@@ -59,24 +59,24 @@
                 <input type="text" data-type="input-set" class="input-bg_icon input-base" id="user" name="username" placeholder="用户名">
             </div>
             <div class="box" data-type="input-set" data-block="2">
-                <div class="input_set01" >
+                <div class="input-set01" >
                         <span style="float: left;color:#707070">公司简称</span>
-                        <input style="float: left;padding-left:12px;" type="" name="data[title]">
+                        <input class="input" style="float: left;padding-left:12px;" type="" name="data[title]">
                 </div>
             </div>
             <div class="box" data-block="2">
                 <form class="content1_form" name="myform" id="myform" action="/index.php?c=form_account" method="post" data-type="form" data-plugin="jQuery.validator;tooltip"  data-p-casename="validator_tooltip01">
-                    <div class="input_set01" >
+                    <div class="input-set01" >
                         <span style="float: left;color:#707070">公司简称</span>
-                        <input style="float: left;padding-left:12px;" type=""  name="data[title]">
+                        <input class="input" style="float: left;padding-left:12px;" type=""  name="data[title]">
                     </div>
-                    <div class="input_set01" >
+                    <div class="input-set01" >
                          <span style="float: left;;color:#707070">所属行业</span>
-                         <input style="float: left;padding-left:12px;" type="" name="data[nature]">
+                         <input class="input" style="float: left;padding-left:12px;" type="" name="data[nature]">
                     </div>                
-                    <div class="input_set01" >
+                    <div class="input-set01" >
                          <span style="float: left;;color:#707070">联系方式</span>
-                          <input style="float: left;padding-left:12px;" type="" name="data[mobile]">
+                          <input class="input" style="float: left;padding-left:12px;" type="" name="data[mobile]">
                     </div> 
 
                     <input type="submit" name="" value="提交问题" class="button">
