--- a/sideBar/sideBar.html
+++ b/sideBar/sideBar.html
@@ -3,26 +3,21 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/css/base.css">
-	<link rel="stylesheet" type="text/css" href="/css/frame.css">
-	<link rel="stylesheet" type="text/css" href="/css/button.css">
-	<link rel="stylesheet" type="text/css" href="/css/slider.css">
-	<link rel="stylesheet" type="text/css" href="/css/content.css">
-	<link rel="stylesheet" type="text/css" href="/css/sideBar.css">
-	<link rel="stylesheet" type="text/css" href="/css/index.css">
-	
 	<script type="text/javascript" src="/js/jquery-1.9.1.min.js"></script>
-	<script type="text/javascript" src="/js/layer/layer.js"></script>
-	<script type="text/javascript" src="/js/index.js"></script>
-	<script type="text/javascript">
-		$(function(){
-			$("#sideBarBox").set({
-				brandName:"sideBarBox",
-				rowBlock:3
-			});
-		});
-		
-	</script>
+  <script type="text/javascript" src="/js/common.js"></script>
+  <script type="text/javascript" src="/js/layer/layer.js"></script>
+	
+  <script type="text/javascript">
+    var c = function(){
+      $(function(){
+        $("#sideBarBox").set({
+          brandName:"sideBar",
+          rowBlock:3
+        });
+      });
+    } 
+    commonHead(c);
+  </script>
 </head>
 <body>
 	<div class="bg extend-width bg-black">
@@ -37,6 +32,18 @@
 	
 	<div id="sideBarBox" class="container1200">
 		<div class="box">
+        <div class="l-sider03 float-l">
+            <ul>
+                <li><a class="floor f01 current"><p class="t01">肯特介绍</p></a></li>
+                <li><a class="floor f02 "><p class="t01">企业文化</p></a></li>
+                <li><a class="floor f02 "><p class="t01">荣誉资质</p></a></li>
+                <li><a class="floor f02 "><p class="t01">联系我们</p></a></li>
+                
+            </ul>
+        </div>  
+    </div>
+
+    <div class="box">
        <div class="l-sider02 float-l">
             <ul>
                 <li>
