--- a/common/common.html
+++ b/common/common.html
@@ -3,9 +3,9 @@
         
         <link class="base" rel="stylesheet" type="text/css" href="/css/web/base.css">
         <link class="ui" rel="stylesheet" type="text/css" href="/css/frame.css">
-        <link rel="stylesheet" type="text/css" href="/css/button.css">
+        <link rel="stylesheet" type="text/css" href="/css/web/button.css">
         <link rel="stylesheet" type="text/css" href="/css/web/barHeader.css">
-        <link rel="stylesheet" type="text/css" href="/css/input.css">
+        <link rel="stylesheet" type="text/css" href="/css/web/input.css">
         <link rel="stylesheet" type="text/css" href="/css/mobile.css">
         <link rel="stylesheet" type="text/css" href="/css/web/slider.css">
         <link rel="stylesheet" type="text/css" href="/css/web/content.css">
