--- a/content/content.html
+++ b/content/content.html
@@ -33,6 +33,67 @@
 	</div>	
 	
 	<div id="contentBox" class="container1200">
+    <div class="box" data-block="1">
+          <div class="pagination02" data-type="pagination">
+                <ul>
+                    <li class="left"><a>上一页</a></li>
+                    <li class=""><a>1</a></li>
+                    <li class=""><a>2</a></li>
+                    <li class="on"><a>3</a></li>
+                    <li class=""><a>4</a></li>
+                    <li class=""><a>5</a></li>
+                    <li class="right"><a>下一页</a></li>
+
+                </ul>
+          </div>
+    </div>
+    <div class="box" data-block="2">
+          <div class="news-list04">
+                <ul>
+                    <li><a>
+                    <span class="iconDownLoad float-r"><img src="/img/iconD_gray.png" alt=""></span>
+                    <span class="date">2015-09-04</span>
+                    <span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+                    <li><a>
+                    <span class="iconDownLoad float-r"><img src="/img/iconD_gray.png" alt=""></span>
+                    <span class="date">2015-09-04</span>
+                    <span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+                    <li><a>
+                    <span class="iconDownLoad float-r"><img src="/img/iconD_gray.png" alt=""></span>
+                    <span class="date">2015-09-04</span>
+                    <span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+                </ul>  
+          </div>
+          <script type="text/javascript">
+                $(function(){
+                    $(".news-list04 .iconDownLoad img").hover(function(){
+                      $(this).attr("src","/img/iconD_red.png")
+                    },function(){
+                      $(this).attr("src","/img/iconD_gray.png")
+                    })
+                })
+          </script>
+    </div>
+
+    <div class="box" data-block="1">
+        <div class="r-text ">
+                  <div class="red h" style="margin-bottom:18px;">肯特介绍</div>
+                  <div class="phase" >
+                    <p>福建肯特计量科技有限公司是由绍兴市肯特机械电子有限公司与福建省计量科学研究院共同投资组建的一家股份制有限责任公司，注册资本人民币2000万元，是一家致力于研发、制造、销售高水平计量测试仪器，并提供相关技术服务的高新技术企业。公司总部位于福建省福州市，在浙江上虞设有生产基地。主要产品包括衡器载荷测量仪、力标准机、材料试验机等。
+                    </p>
+                    <p> 
+公司依托福建省计量科学研究院智能测量研究所建立创新研发团队，由专业从事智能计量测试仪器研发工作的研究人员组成，多数具有硕士以上学历，具有深厚的专业基础和丰富的从业经验。公司与浙江大学、福州大学等高校和科研院所保持着长期合作关系。
+                    </p>
+                    <p>
+福建肯特本着 “以科技为导向、以质量为主线”的原则，凭借创新的设计理念，过硬的产品质量和完善的售后服务体系，成为各级技术监督机构、科研院所和企业信赖的合作伙伴。</p>
+                    <div class="newsPic align-center" style="padding-top:10px;">
+                      <img src="/img/naver_pics03.png">
+                    </div>
+                  </div>
+                   
+        </div>
+    </div>
+
     <div class="box" data-type="list">
               <div class="adr_box02">
                           <p class="adr">地址：福建省闽侯县铁岭工业区二期长龙西路   </p>
