--- a/content/content.html
+++ b/content/content.html
@@ -33,6 +33,18 @@
 	</div>	
 	
 	<div id="contentBox" class="container1200">
+    <div class="box">
+        <div class="tagLine01 clear">
+            <div class="icon">
+                <a href="#"><img src="img/tagIcon.png" alt=""><span style="margin-left:6px;">标签：</span></a>
+            </div>
+            <ul class="ul-line02 font-s ">
+                <li><a href="#">APEC电子商务工商联盟论坛 </a></li>
+                <li><a href="#">跨境电商</a></li>
+                <li><a href="#">福建润商</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="box" data-block="1">
           <div class="pagination02" data-type="pagination">
                 <ul>
@@ -61,7 +73,7 @@
                     <li><a>
                     <span class="iconDownLoad float-r"><img src="/img/iconD_gray.png" alt=""></span>
                     <span class="date">2015-09-04</span>
-                    <span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+                    <span class="text">2014年度上海市服务贸易发展专项资金申</span></a></li>
                 </ul>  
           </div>
           <script type="text/javascript">
