--- a/barHeader/barHeader.html
+++ b/barHeader/barHeader.html
@@ -33,6 +33,17 @@
 		</div>
 	</div>	
 	<div id="barHeaderBox" class="container1200" ><!-- data-set="set" -->
+		<div class="box" >
+			<div class="a-title-header02">
+	            <p class="mainTitle">学做并重 深化改革——上海检验检疫局扎实开展“两学一做”学习教育</p>
+	            <p class="articleInf font-s">
+		            <span>文章来源：福建省计量科学研究院</span>
+		            <span>更新时间：2016/7/13 8:41:26</span>
+		            <span>阅读量:200</span>
+	            </p>
+	        </div>
+		</div>
+
 		<div class="box" data-block="3">
 			<div class="web_url">
 				<a>首页</a> &gt; <a>关于我们 </a> &gt; <a> 肯特介绍</a>
