--- a/barHeader/barHeader.html
+++ b/barHeader/barHeader.html
@@ -33,6 +33,18 @@
 		</div>
 	</div>	
 	<div id="barHeaderBox" class="container1200" ><!-- data-set="set" -->
+		<div class="box">
+			<div class="h-relative float-r">
+				<a class="relative_link">力标准机</a>
+				<a class="relative_link" style="margin-left:20px;">材料试验机</a>
+			</div>
+			<div class="h-title01 red">
+				<span class="icon"><img src="/img/m_title01.png"></span>
+				<span class="text">衡器载荷测量仪 </span>
+			</div>	
+		</div>
+		
+
 		<div class="box" >
 			<div class="a-title-header02">
 	            <p class="mainTitle">学做并重 深化改革——上海检验检疫局扎实开展“两学一做”学习教育</p>
