--- a/common/common.html
+++ b/common/common.html
@@ -2,7 +2,8 @@
     <div id="head" class="head">
         
         <link class="base" rel="stylesheet" type="text/css" href="/css/web/base.css">
-        <link class="ui" rel="stylesheet" type="text/css" href="/css/frame.css">
+        <link class="ui" rel="stylesheet" type="text/css" href="/css/web/frame.css">
+        <link rel="stylesheet" type="text/css" href="/css/web/cell.css">
         <link rel="stylesheet" type="text/css" href="/css/web/button.css">
         <link rel="stylesheet" type="text/css" href="/css/web/barHeader.css">
         <link rel="stylesheet" type="text/css" href="/css/web/input.css">
