--- a/content/content.html
+++ b/content/content.html
@@ -33,6 +33,9 @@
 	</div>	
 	
 	<div id="contentBox" class="container1200">
+    <div class="box" data-type="share">
+        <div></div>
+    </div>
     <div class="box" data-block="1" data-type="content">
           <ul class="news-ul03">
             <li class="newsRow over-flow ">
@@ -136,7 +139,7 @@
 
     </div>
 
-    <div class="box">
+    <div class="box" data-type="share">
         <div class="share clear">
             <span class="float-l" style="margin-top:3px;">分享到：</span>
             <div class="bdsharebuttonbox float-l"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
