--- a/special/special.html
+++ b/special/special.html
@@ -39,6 +39,10 @@
 	</div>	
 	<div class="fixedBg"></div>
 	<div id="specialBox" class="container1200">
+		<div class="box" data-block ="1">
+			<script type="text/javascript" src="canvas1.js"></script>
+			<div id="jsi-particle-container" style="height: 500px"></div>
+		</div>
 		<div class="box" data-block="1">
 			 <div class="parent02">
 				  <canvas id="html5_3d_animation" class="mar-center" style="display:block;">Internet Explorer 8 Not Supported</canvas>
